[gd_scene load_steps=12 format=3 uid="uid://c8tbmwqdapnsc"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_obqh1"]
[ext_resource type="FontFile" uid="uid://donxec21iqi2o" path="res://Assets/fonts/PixelOperator8.ttf" id="1_s31jl"]
[ext_resource type="Theme" uid="uid://cs64m8jorbkrh" path="res://Assets/themes/button big_theme.tres" id="2_7pymf"]
[ext_resource type="PackedScene" uid="uid://854dmrdy2jd0" path="res://Scenes/buy_button.tscn" id="2_ggx4j"]
[ext_resource type="Script" path="res://Scripts/shop_input_manager.gd" id="3_ernqd"]
[ext_resource type="FontFile" uid="uid://d2voppd6fmkh6" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="4_ral8i"]
[ext_resource type="Script" path="res://Scripts/shop_scene_manager.gd" id="6_e8hkw"]
[ext_resource type="FontFile" uid="uid://cxpul0hcnrfyt" path="res://Assets/fonts/PixelDigivolve-mOm9.ttf" id="8_pd30o"]
[ext_resource type="Texture2D" uid="uid://b3226gsd6ehqt" path="res://Assets/images/Pen.png" id="9_4m3r7"]
[ext_resource type="PackedScene" uid="uid://4gv81wu465g1" path="res://Scenes/card_collection.tscn" id="10_banbt"]
[ext_resource type="PackedScene" uid="uid://buwm6dg8acgmi" path="res://Scenes/manage_card.tscn" id="11_fntq0"]

[node name="ShopScene" type="Node2D"]
script = ExtResource("1_obqh1")

[node name="CardSlot" type="ColorRect" parent="."]
offset_left = 312.0
offset_top = 104.0
offset_right = 1616.0
offset_bottom = 424.0
mouse_filter = 2
color = Color(0.18359, 0.18359, 0.18359, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CardSlot"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.025
anchor_right = 0.006
anchor_bottom = 0.025
offset_left = 0.224
offset_right = 1280.22
offset_bottom = 304.0
mouse_filter = 2
color = Color(0.106237, 0.106237, 0.106237, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CardSlot/ColorRect"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.474
anchor_right = 0.5
anchor_bottom = 0.474
offset_left = -623.998
offset_top = -128.096
offset_right = 624.002
offset_bottom = 143.904
mouse_filter = 2
color = Color(0.00234459, 0.00234459, 0.00234459, 1)
metadata/_edit_use_anchors_ = true

[node name="CardClipMask" type="ColorRect" parent="CardSlot/ColorRect/ColorRect"]
clip_children = 1
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.474
anchor_right = 0.5
anchor_bottom = 0.474
offset_left = -624.048
offset_top = -176.928
offset_right = 623.952
offset_bottom = 189.072
mouse_filter = 2
color = Color(0.00234459, 0.00234459, 0.00234459, 1)

[node name="TileClipMask" type="ColorRect" parent="."]
clip_children = 1
z_index = 1
offset_left = 312.0
offset_top = 472.0
offset_right = 952.0
offset_bottom = 792.0

[node name="TileSlot" type="ColorRect" parent="."]
offset_left = 312.0
offset_top = 456.0
offset_right = 616.0
offset_bottom = 808.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 344.0
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="BuyButton1" parent="TileSlot" instance=ExtResource("2_ggx4j")]
position = Vector2(152, 385)

[node name="TileSlot2" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 1.105
anchor_right = 1.105
offset_left = 648.0
offset_top = 456.0
offset_right = 952.0
offset_bottom = 808.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -168.0
offset_right = 144.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect" type="ColorRect" parent="TileSlot2/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="BuyButton2" parent="TileSlot2" instance=ExtResource("2_ggx4j")]
position = Vector2(152, 385)

[node name="Button" type="Button" parent="."]
self_modulate = Color(0.207512, 0.207512, 0.207512, 1)
z_index = 3
offset_left = 64.0
offset_top = 352.0
offset_right = 256.0
offset_bottom = 512.0
focus_mode = 0
theme = ExtResource("2_7pymf")
theme_override_fonts/font = ExtResource("1_s31jl")
theme_override_font_sizes/font_size = 32
keep_pressed_outside = true

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 28
text = "Reroll"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopInputManager" type="Node2D" parent="."]
script = ExtResource("3_ernqd")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
offset_left = 32.0
offset_right = 288.0
offset_bottom = 104.0
color = Color(0.184314, 0.184314, 0.184314, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_right = 248.0
offset_bottom = 96.0
color = Color(0.105882, 0.105882, 0.105882, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 232.0
offset_bottom = 88.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ColorRect/ColorRect/ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_right = 224.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 24
text = "Round: "
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
z_index = 3
layout_mode = 0
offset_top = 120.0
offset_right = 256.0
offset_bottom = 264.0
color = Color(0.184314, 0.184314, 0.184314, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 136.0
color = Color(0.105882, 0.105882, 0.105882, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect2/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 120.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ColorRect/ColorRect2/ColorRect/ColorRect"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 24
text = "Money:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ColorRect/ColorRect2/ColorRect/ColorRect"]
layout_mode = 0
offset_top = 56.0
offset_right = 224.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ContinueButton" type="Button" parent="."]
self_modulate = Color(0.207843, 0.207843, 0.207843, 1)
offset_left = 1616.0
offset_top = 896.0
offset_right = 1896.0
offset_bottom = 1056.0
focus_mode = 0
theme = ExtResource("2_7pymf")
keep_pressed_outside = true

[node name="Label" type="Label" parent="ContinueButton"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 32
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopSceneManager" type="Node2D" parent="."]
script = ExtResource("6_e8hkw")

[node name="DarkenScreen" type="ColorRect" parent="ShopSceneManager"]
z_index = 120
offset_left = 1920.0
offset_right = 3840.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="ManageCard" type="Button" parent="."]
self_modulate = Color(0.212305, 0.212305, 0.212305, 1)
offset_left = 1024.0
offset_top = 520.0
offset_right = 1296.0
offset_bottom = 656.0
scale = Vector2(2, 2)
focus_mode = 0
theme = ExtResource("2_7pymf")
keep_pressed_outside = true

[node name="Node2D" type="Node2D" parent="ManageCard"]

[node name="Label" type="Label" parent="ManageCard/Node2D"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 12.0
offset_right = 189.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_pd30o")
theme_override_font_sizes/font_size = 40
text = "Manage 
CARD"
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="ManageCard/Node2D"]
position = Vector2(208, 68)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_4m3r7")

[node name="CardCollection" parent="." instance=ExtResource("10_banbt")]
position = Vector2(1920, 0)

[node name="BackButton" type="Button" parent="CardCollection"]
self_modulate = Color(0.253238, 0.253238, 0.253238, 1)
offset_left = 64.0
offset_top = 936.0
offset_right = 288.0
offset_bottom = 1056.0
focus_mode = 0
theme = ExtResource("2_7pymf")
keep_pressed_outside = true

[node name="BackLabel" type="Label" parent="CardCollection/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ral8i")
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardManagingPosition" type="Node2D" parent="CardCollection"]
position = Vector2(512, 540)

[node name="CardManagerScreen" parent="CardCollection" instance=ExtResource("11_fntq0")]
visible = false
z_index = 120
position = Vector2(1920, 0)

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ManageCard" to="." method="_on_manage_card_pressed"]
[connection signal="button_down" from="CardCollection/BackButton" to="." method="_on_back_button_down"]
[connection signal="button_up" from="CardCollection/BackButton" to="." method="_on_back_button_up"]
[connection signal="pressed" from="CardCollection/BackButton" to="." method="_on_back_button_pressed"]
